@@ -1,3 +1,6 @@
+2010-06-22	Nils Durner
+	* sysconf()
+
 2010-01-17  Nils Durner
 	* sockets functions now take/return ints instead of SOCKETs
 
